analysis of clicks on ToC

--- a/analysis_5_clicks_modeling.ipynb
+++ b/analysis_5_clicks_modeling.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b0669198",
+   "id": "c3a8fde0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8d496ff0",
+   "id": "dbed184b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8378a1d2",
+   "id": "e34f49f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "77fac597",
+   "id": "7f2eff08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6e74cf83",
+   "id": "be2f838e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6c53b9fd",
+   "id": "f89bc296",
    "metadata": {},
    "outputs": [
     {
@@ -111,14 +111,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73b4c60a",
+   "id": "f464e517",
    "metadata": {},
    "source": [
     "# Purpose\n",
     "\n",
     "We discovered a bucketing issue that the sessions in treatment group were not consistantly seeing the new ToC. Some of sessions also saw the old ToC. It happened on all type of viewport sizes. For example on frwiki, in treatment group  more than half of the sessions with larger than 1000px viewport are assigned to old ToC.\n",
     "\n",
-    "In this notebook, we try to ananlyze clicks after filter sessions in treatment group seeing the old ToC and sessions in control group seeing the new ToC. \n",
+    "In this notebook, we try to analyze clicks after filtering the clicks on old ToC in treatment group and filtering the clicks on new ToC in control group. \n",
     "\n",
     "The caveat: the sessions with 0 click are missing in the analysis data. The analysis is only focus on the sessions which clicked on ToC, whether the sessions with new ToC clicked more than the ones with old ToC. "
    ]
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "45230b98",
+   "id": "18ab8e3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e424d86",
+   "id": "1705b11a",
    "metadata": {},
    "source": [
     "# Q1: Is the new table of contents is used more frequently than the previous table of contents\n"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e64dd519",
+   "id": "e162ee91",
    "metadata": {},
    "source": [
     "Query clicks per page token by each session"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "81f2cde6",
+   "id": "c43e7ccb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a087a93e",
+   "id": "d814e11b",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "27856a49",
+   "id": "48be27e0",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "9786c926",
+   "id": "7b7b0a09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c40d27ed",
+   "id": "beaf98e1",
    "metadata": {},
    "source": [
     "## Logged-in Users"
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "391820b8",
+   "id": "28bb393f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f83d729",
+   "id": "512d93da",
    "metadata": {},
    "source": [
     "### Data exploration\n",
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "f3d330e6",
+   "id": "bf63d119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "a723f29c",
+   "id": "56ffbde4",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "345fe9e1",
+   "id": "2185d509",
    "metadata": {},
    "source": [
     "__Note__ \n",
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "ab724225",
+   "id": "455cd253",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "93e431b2",
+   "id": "1a0bde74",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "1865021a",
+   "id": "dd04df04",
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "9e85a512",
+   "id": "623e350d",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "f2ab288e",
+   "id": "96da3926",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "0d84deb1",
+   "id": "8737c06b",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33f05fce",
+   "id": "220ede28",
    "metadata": {},
    "source": [
     "__Note__  \n",
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89f66261",
+   "id": "b6b4e40e",
    "metadata": {},
    "source": [
     "### Distribution of number of clicks"
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "ec2066e8",
+   "id": "54ec4d48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "0113ebf8",
+   "id": "17371e6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "22afd286",
+   "id": "8fac6090",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "75094c11",
+   "id": "e3039b4f",
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "8bb9fee1",
+   "id": "258ae02d",
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "8c79455b",
+   "id": "1478fd86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "7a8a4d44",
+   "id": "c6f8c800",
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "a47bdc8a",
+   "id": "c0d527eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1397,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "813db2fa",
+   "id": "a44219b8",
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1750,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "0f4cb14a",
+   "id": "a6ab430d",
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1802,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "84af7d43",
+   "id": "cb6098c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1821,7 +1821,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "d605eefb",
+   "id": "976d68a1",
    "metadata": {},
    "outputs": [
     {
@@ -1944,7 +1944,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "0ff58779",
+   "id": "8f997504",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1956,7 +1956,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "e34c2d9e",
+   "id": "ab035bee",
    "metadata": {},
    "outputs": [
     {
@@ -2027,7 +2027,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "f28d24b7",
+   "id": "48422e58",
    "metadata": {},
    "outputs": [
     {
@@ -2079,7 +2079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "328c2b06",
+   "id": "8d993929",
    "metadata": {},
    "source": [
     "__Note__   \n",
@@ -2091,7 +2091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "746b2a14",
+   "id": "5041d05f",
    "metadata": {},
    "source": [
     "### Modeling"
@@ -2100,7 +2100,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "9de2471d",
+   "id": "0f0a5f54",
    "metadata": {},
    "outputs": [
     {
@@ -2134,7 +2134,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "433d5bec",
+   "id": "11772c45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2146,7 +2146,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "3571b0ae",
+   "id": "f4430e79",
    "metadata": {},
    "outputs": [
     {
@@ -2193,7 +2193,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "1490550a",
+   "id": "f356fab3",
    "metadata": {},
    "outputs": [
     {
@@ -2235,7 +2235,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "9f369b08",
+   "id": "94751453",
    "metadata": {},
    "outputs": [
     {
@@ -2317,7 +2317,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "4c8a3736",
+   "id": "625b7142",
    "metadata": {},
    "outputs": [
     {
@@ -2346,7 +2346,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "efc905ce",
+   "id": "31be32b3",
    "metadata": {},
    "outputs": [
     {
@@ -2410,7 +2410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "399d2136",
+   "id": "290d4e82",
    "metadata": {},
    "source": [
     "__Note:__  \n",
@@ -2424,7 +2424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "434acf20",
+   "id": "cde9648c",
    "metadata": {},
    "source": [
     "## Anonymous user"
@@ -2433,7 +2433,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "06eb2789",
+   "id": "0ae5046d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2444,7 +2444,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "4160cc5a",
+   "id": "9457dad5",
    "metadata": {},
    "outputs": [
     {
@@ -2522,7 +2522,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "555273f7",
+   "id": "adec5833",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2535,7 +2535,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "94f2fae1",
+   "id": "954c13f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2545,7 +2545,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "6d60a41b",
+   "id": "4768f151",
    "metadata": {},
    "outputs": [
     {
@@ -2574,7 +2574,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "89e279e9",
+   "id": "55bac912",
    "metadata": {},
    "outputs": [
     {
@@ -2603,7 +2603,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "94f79fba",
+   "id": "1725fdaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2617,7 +2617,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "5d050b5a",
+   "id": "c0cee1a6",
    "metadata": {},
    "outputs": [
     {
@@ -2904,7 +2904,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "2f75572e",
+   "id": "69c1d524",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2916,7 +2916,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "d555d740",
+   "id": "d77c38ce",
    "metadata": {},
    "outputs": [
     {
@@ -2986,7 +2986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15e7781d",
+   "id": "d191abcc",
    "metadata": {},
    "source": [
     "### Distribution of number of clicks"
@@ -2995,7 +2995,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "1395ebcf",
+   "id": "71a5b8a7",
    "metadata": {},
    "outputs": [
     {
@@ -3047,7 +3047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "214dc115",
+   "id": "12d24671",
    "metadata": {},
    "source": [
     "### Modeling"
@@ -3056,7 +3056,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "9b137466",
+   "id": "cedfcc65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3068,7 +3068,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "b826831a",
+   "id": "0f10d5af",
    "metadata": {},
    "outputs": [
     {
@@ -3115,7 +3115,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "b96e941f",
+   "id": "147e700b",
    "metadata": {},
    "outputs": [
     {
@@ -3156,7 +3156,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "5fdd51f4",
+   "id": "76d6af59",
    "metadata": {},
    "outputs": [
     {
@@ -3185,7 +3185,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "a0f73c17",
+   "id": "4dfe2c75",
    "metadata": {},
    "outputs": [
     {
@@ -3249,7 +3249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "687371a0",
+   "id": "2d7c1d07",
    "metadata": {},
    "source": [
     "__Note:__  \n",
@@ -3263,7 +3263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e5c4720",
+   "id": "b03dc20a",
    "metadata": {},
    "source": [
     "__Summary__\n",
@@ -3279,7 +3279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1e6fdb6",
+   "id": "6c8df01e",
    "metadata": {},
    "outputs": [],
    "source": []
