AB test analysis of clicks on ToC

--- a/analysis_5_clicks_modeling.ipynb
+++ b/analysis_5_clicks_modeling.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c3a8fde0",
+   "id": "eceed60e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dbed184b",
+   "id": "1dc36cff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e34f49f0",
+   "id": "ece2ae10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7f2eff08",
+   "id": "f5986fe0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "be2f838e",
+   "id": "999d334e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f89bc296",
+   "id": "9286e091",
    "metadata": {},
    "outputs": [
     {
@@ -111,12 +111,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f464e517",
+   "id": "daa4c86f",
    "metadata": {},
    "source": [
     "# Purpose\n",
     "\n",
-    "We discovered a bucketing issue that the sessions in treatment group were not consistantly seeing the new ToC. Some of sessions also saw the old ToC. It happened on all type of viewport sizes. For example on frwiki, in treatment group  more than half of the sessions with larger than 1000px viewport are assigned to old ToC.\n",
+    "We discovered a bucketing issue that the sessions in treatment group were not consistantly seeing the new ToC. Some of sessions also saw the old ToC. It happened on all type of viewport sizes. For example on frwiki, in treatment group  more than half of the sessions with larger than 1000px viewport are assigned to old ToC. report\n",
     "\n",
     "In this notebook, we try to analyze clicks after filtering the clicks on old ToC in treatment group and filtering the clicks on new ToC in control group. \n",
     "\n",
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "18ab8e3d",
+   "id": "67006ca6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1705b11a",
+   "id": "4640a739",
    "metadata": {},
    "source": [
     "# Q1: Is the new table of contents is used more frequently than the previous table of contents\n"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e162ee91",
+   "id": "36481edb",
    "metadata": {},
    "source": [
     "Query clicks per page token by each session"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c43e7ccb",
+   "id": "11e1c1bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d814e11b",
+   "id": "5f9e3c9c",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "48be27e0",
+   "id": "fd03eed9",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "7b7b0a09",
+   "id": "0dfe2f1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beaf98e1",
+   "id": "c2b905d9",
    "metadata": {},
    "source": [
     "## Logged-in Users"
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "28bb393f",
+   "id": "4b24317f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "512d93da",
+   "id": "020dc7b2",
    "metadata": {},
    "source": [
     "### Data exploration\n",
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "bf63d119",
+   "id": "1c338ec4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "56ffbde4",
+   "id": "6db2c511",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2185d509",
+   "id": "ebd9670a",
    "metadata": {},
    "source": [
     "__Note__ \n",
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "455cd253",
+   "id": "ba1bf7bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "1a0bde74",
+   "id": "638d34c1",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "dd04df04",
+   "id": "713dac53",
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "623e350d",
+   "id": "9bed0c77",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "96da3926",
+   "id": "a6b7f72e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "8737c06b",
+   "id": "1368000f",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "220ede28",
+   "id": "44e8281b",
    "metadata": {},
    "source": [
     "__Note__  \n",
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6b4e40e",
+   "id": "d4ee78e7",
    "metadata": {},
    "source": [
     "### Distribution of number of clicks"
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "54ec4d48",
+   "id": "f7f2a254",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "17371e6d",
+   "id": "f5e3a3a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "8fac6090",
+   "id": "dca077ae",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "e3039b4f",
+   "id": "088af558",
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "258ae02d",
+   "id": "28cfe9c6",
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "1478fd86",
+   "id": "647db89d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "c6f8c800",
+   "id": "ca152018",
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "c0d527eb",
+   "id": "475b3751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1397,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "a44219b8",
+   "id": "5bb92923",
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1750,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "a6ab430d",
+   "id": "d2cd123c",
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1802,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "cb6098c9",
+   "id": "6ba715cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1821,7 +1821,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "976d68a1",
+   "id": "e40391aa",
    "metadata": {},
    "outputs": [
     {
@@ -1944,7 +1944,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "8f997504",
+   "id": "a89d91f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1956,7 +1956,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "ab035bee",
+   "id": "de95bb7b",
    "metadata": {},
    "outputs": [
     {
@@ -2027,7 +2027,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "48422e58",
+   "id": "26c59b4e",
    "metadata": {},
    "outputs": [
     {
@@ -2079,7 +2079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d993929",
+   "id": "1e6d6429",
    "metadata": {},
    "source": [
     "__Note__   \n",
@@ -2091,7 +2091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5041d05f",
+   "id": "f17a2375",
    "metadata": {},
    "source": [
     "### Modeling"
@@ -2100,7 +2100,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "0f0a5f54",
+   "id": "e805ba8e",
    "metadata": {},
    "outputs": [
     {
@@ -2134,7 +2134,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "11772c45",
+   "id": "f72aefed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2146,7 +2146,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "f4430e79",
+   "id": "2186a869",
    "metadata": {},
    "outputs": [
     {
@@ -2193,7 +2193,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "f356fab3",
+   "id": "09ee4c55",
    "metadata": {},
    "outputs": [
     {
@@ -2235,7 +2235,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "94751453",
+   "id": "2a22b29b",
    "metadata": {},
    "outputs": [
     {
@@ -2317,7 +2317,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "625b7142",
+   "id": "d33a2b6d",
    "metadata": {},
    "outputs": [
     {
@@ -2346,7 +2346,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "31be32b3",
+   "id": "7e51af43",
    "metadata": {},
    "outputs": [
     {
@@ -2410,7 +2410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "290d4e82",
+   "id": "342ed5c5",
    "metadata": {},
    "source": [
     "__Note:__  \n",
@@ -2424,7 +2424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cde9648c",
+   "id": "f13c803e",
    "metadata": {},
    "source": [
     "## Anonymous user"
@@ -2433,7 +2433,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "0ae5046d",
+   "id": "baffc382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2444,7 +2444,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "9457dad5",
+   "id": "7f8f2699",
    "metadata": {},
    "outputs": [
     {
@@ -2522,7 +2522,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "adec5833",
+   "id": "caa71039",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2535,7 +2535,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "954c13f3",
+   "id": "2cc1ffb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2545,7 +2545,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "4768f151",
+   "id": "ff83d063",
    "metadata": {},
    "outputs": [
     {
@@ -2574,7 +2574,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "55bac912",
+   "id": "f38bfabf",
    "metadata": {},
    "outputs": [
     {
@@ -2603,7 +2603,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "1725fdaa",
+   "id": "cb1722bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2617,7 +2617,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "c0cee1a6",
+   "id": "a89981a0",
    "metadata": {},
    "outputs": [
     {
@@ -2904,7 +2904,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "69c1d524",
+   "id": "538800d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2916,7 +2916,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "d77c38ce",
+   "id": "799a37fc",
    "metadata": {},
    "outputs": [
     {
@@ -2986,7 +2986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d191abcc",
+   "id": "ebf49326",
    "metadata": {},
    "source": [
     "### Distribution of number of clicks"
@@ -2995,7 +2995,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "71a5b8a7",
+   "id": "68e38127",
    "metadata": {},
    "outputs": [
     {
@@ -3047,7 +3047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12d24671",
+   "id": "9e6bbfbe",
    "metadata": {},
    "source": [
     "### Modeling"
@@ -3056,7 +3056,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "cedfcc65",
+   "id": "b61892a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3068,7 +3068,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "0f10d5af",
+   "id": "406f6ef5",
    "metadata": {},
    "outputs": [
     {
@@ -3115,7 +3115,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "147e700b",
+   "id": "81f7d77e",
    "metadata": {},
    "outputs": [
     {
@@ -3156,7 +3156,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "76d6af59",
+   "id": "f817d2df",
    "metadata": {},
    "outputs": [
     {
@@ -3185,7 +3185,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "4dfe2c75",
+   "id": "3f787c13",
    "metadata": {},
    "outputs": [
     {
@@ -3249,7 +3249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d7c1d07",
+   "id": "085f3eb7",
    "metadata": {},
    "source": [
     "__Note:__  \n",
@@ -3263,7 +3263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b03dc20a",
+   "id": "e761ee31",
    "metadata": {},
    "source": [
     "__Summary__\n",
@@ -3279,7 +3279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c8df01e",
+   "id": "c2c007ba",
    "metadata": {},
    "outputs": [],
    "source": []
